--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -28,6 +28,44 @@ $darkgrey: rgb(61, 66, 74);
 }
   // main end
 
+  .buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    button {
+      border: none;
+      background: $orange;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+      padding: .25rem .5rem;
+      cursor: pointer;
+      color: black;
+      transition: all .3s ease-in-out;
+      &:hover {
+        background: $blue;
+      }
+    }
+    #share-youtube{
+      margin-left: 2rem;
+      border: none;
+      background: $blue;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+      padding: .25rem .5rem;
+      cursor: pointer;
+      color: white;
+      transition: all .3s ease-in-out;
+      &:hover {
+        background: $orange;
+      }
+    }
+  }
+}
 // media queries for homepage
 @media screen and (max-width: 800px) {
   .home-page {
@@ -46,4 +84,3 @@ $darkgrey: rgb(61, 66, 74);
 }
 
 
-}
