--- a/Revamedia/src/app/Components/post-add/post-add.component.html
+++ b/Revamedia/src/app/Components/post-add/post-add.component.html
@@ -1,5 +1,4 @@
 <!-- ADD POST FORM START -->
-
 <div class="modal" id="add-post-modal">
   <div class="form-header">
     <h3>Create new post</h3>
@@ -11,7 +10,7 @@
       <input type="url" name="image" ngModel id="image" placeholder="Image url...">
     </div>
     <div class="form-data">
-      <input type="text" name="userId" ngModel="{{ user?.userId }}">
+      <input type="hidden" name="userId" ngModel="{{ user?.userId }}">
       <h4>Write a caption</h4>
       <textarea name="message" ngModel placeholder="Write a caption..." rows="6"></textarea>
     </div>
