--- a/Revamedia/src/app/Components/post/post.component.html
+++ b/Revamedia/src/app/Components/post/post.component.html
@@ -6,31 +6,36 @@
       <p (click)="goToProfile(post.ownerId.userId)">{{ post.ownerId.username }}</p>
     </div>
     <div class="post-options">
-      <fa-icon (click)="openModal('edit','post-modal', post)" id="editIcon" [icon]="faPenToSquare" ></fa-icon>
-      <fa-icon (click)="openModal('delete', 'post-modal', post)"  id="trashIcon" [icon]="faTrashCan"></fa-icon>
+      <fa-icon (click)="openEditPostModal(post)" id="editIcon" [icon]="faPenToSquare" ></fa-icon>
+      <fa-icon (click)="openDeletePostModal(post)"  id="trashIcon" [icon]="faTrashCan"></fa-icon>
     </div>
   </div>
   <div class="post-body" id="post-body">
     <img src="{{post.image}}" alt="{{post.image}}" *ngIf="post?.image !== null">
+    <div class="youtube-link" *ngIf="post.youtubeLink !== null">
+      <div class="youtube-logo" *ngIf="post.youtubeLink !== null">
+        <img src="../../../assets/youtube-svgrepo-com.svg" alt="Youtube">
+      </div>
+      <a *ngIf="post.youtubeLink !== null" href="{{post.youtubeLink}}" title="{{post.youtubeLink}}" target="_blank">{{ post.youtubeLink }}</a>
+    </div>
     <div class="post-description" id="setBackgroundColor">
       <p><a (click)="goToProfile(post.ownerId.userId)">{{post.ownerId.username }}</a>{{post.message}}</p>
       <p>{{post.message}}</p>
     </div>
     <div class="post-options" id="setBackgroundColor">
       <div class="container">
-        <div class="likes" (click)="likePost(post)">
+        <div class="likes" >
           <fa-icon [icon]="faHeart" size="lg" [ngClass]="[post.likes.length < 1 ? 'NoLike' : 'OneLike']">
           </fa-icon>
           <span>{{ post.likes?.length }} likes</span>
         </div>
-        <div class="comment" (click)="toggleComments()"><span>Comment</span>
+        <div class="comment" ><span>Comment</span>
           <fa-icon id="commentIcon" title="Comment" [icon]="faComment" size="lg"></fa-icon>
         </div>
       </div>
       <div class="bookmark">
         <fa-icon id="icon" title="Bookmark" [icon]="faBookmark" size="lg"></fa-icon>
       </div>
-
     </div>
 
     <span *ngIf="post.comments?.length === 0">No Comments</span>
@@ -45,43 +50,8 @@
     </div>
   </div>
 </div>
-<!-- BLACKOUTSCREEN -->
-<div class="screen" id="screen" (click)="closeAnyModal()"></div>
 
-<div class="modal" id="delete-post-modal">
-  <div class="form-header">
-    <h3>Delete post</h3>
-    <span (click)="closeModal('delete', 'post-modal')">x</span>
-  </div>
-  <form (ngSubmit)="onDeletePost(post.postId)">
-    <h2>Are you sure you want to delete this post?</h2>
-    <span style="font-size: .9rem;">{{ deletePost?.message }}</span>
-    <img style="width:8rem;height: 8rem; object-fit:cover;" *ngIf="deletePost?.image !== ''" src="{{ deletePost?.image }}" alt="Image">
-    <div class="post-submit">
-      <button id="deleteBtn">Delete Post</button>
-    </div>
-  </form>
-</div>
+<app-post-delete *ngIf="deleteModalIsOn" [post]="activePost"  (closeDeleteForm)='closeDeleteForm()' ></app-post-delete>
+<app-post-edit *ngIf="editModalIsOn" [post]="activePost"  (closeEditPostForm)='closeDeleteForm()'></app-post-edit>
 
-<!-- Edit POST FORM START -->
-<div class="modal" id="edit-post-modal">
-  <div class="form-header">
-    <h3>Edit post</h3>
-    <span (click)="closeModal('edit', 'post-modal')">x</span>
-  </div>
-  <form #editPostForm="ngForm" (ngSubmit)="onUpdatePost(editPostForm)" ngNativeValidate>
-    <div class="form-data">
-      <h4>Edit Image or Video</h4>
-      <input type="hidden" name="postId" ngModel="{{ editPost?.postId }}">
-      <input type="url" ngModel="{{ editPost?.image }}" name="image" id="image" placeholder="ImageUrl or Youtube Link">
-    </div>
-    <div class="form-data">
-      <h4>Edit caption</h4>
-      <textarea name="message" placeholder="Write a caption..." ngModel="{{ editPost?.message }}" rows="6"></textarea>
-    </div>
-    <div class="post-submit">
-      <button>Update Post</button>
-    </div>
-  </form>
-</div>
-<!-- Edit POST FORM END -->
+
