--- a/Revamedia/src/app/Components/post/post.component.scss
+++ b/Revamedia/src/app/Components/post/post.component.scss
@@ -96,6 +96,30 @@ $darkgrey: rgb(61, 66, 74);
       max-height: 28rem;
       object-fit: cover;
     }
+    .youtube-link{
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 1rem;
+      border-bottom: 1px solid $lightgrey;
+      .youtube-logo{
+        img{
+          width: 2rem;
+          height: 2rem;
+          margin-right: 1rem;
+        }
+      }
+      a{
+        font-size: 1.4rem;
+        text-decoration: none;
+        color: $blue;
+        font-weight: normal;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+    }
 
     .post-description {
       width: 100%;
@@ -281,6 +305,7 @@ $darkgrey: rgb(61, 66, 74);
         height: 2rem;
         margin-right: 1rem;
       }
+
     }
 
     span {
